# valuation_project

./: README.md  pyproject.toml
notebooks/: test.ipynb
src/: Home.py  streamlit_app.py
src/pages/: 1_Cashflow.py  1_Data.py  1_Methodology.py  2_Analysis.py  3_Evaluation.py
src/util/: charts.py  create_df.py  functions.py  markdown_latex.py  sidebar.py
